<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.betterlife.ui.tasks.TasksViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_dialog"
        android:padding="@dimen/spacing_large">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_new_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_habit_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_large"
            android:hint="@string/your_task"
            app:layout_constraintEnd_toEndOf="@+id/text_new_habit"
            app:layout_constraintStart_toStartOf="@+id/text_new_habit"
            app:layout_constraintTop_toBottomOf="@+id/text_new_habit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_habit_name"
                style="@style/TextStyle.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:text="@={viewModel.taskText}"
                app:maxNumberOfLines="@{4}" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/image_idea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_lamp"
            app:layout_constraintStart_toStartOf="@+id/layout_habit_name"
            app:layout_constraintTop_toBottomOf="@+id/layout_habit_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_habit_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:text="@string/task_hint"
            android:textColor="@color/black_60"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/layout_habit_name"
            app:layout_constraintStart_toEndOf="@+id/image_idea"
            app:layout_constraintTop_toTopOf="@+id/image_idea"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            style="@style/MaterialButtonStyle.MaterialAddButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:onClick="@{() -> viewModel.onClickAdd()}"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_habit_hint"
            app:layout_constraintTop_toBottomOf="@+id/text_habit_hint" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_close"
            style="@style/MaterialButtonStyle.MaterialCancelButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> viewModel.onClickCancel()}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/image_idea"
            app:layout_constraintTop_toBottomOf="@+id/text_habit_hint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>







