<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.Html" />

        <variable
            name="viewModel"
            type="com.karrar.betterlife.ui.habits.deleteHabitDialog.DeleteHabitDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_dialog"
        android:padding="@dimen/spacing_large">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_habit"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:src="@drawable/shape_circle_background"
            app:layout_constraintBottom_toTopOf="@+id/text_sure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <ImageView
            android:id="@+id/idea"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/are_you_sure"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/habit_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.75"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/do_you_really_want_to_delete_this_habit_this_process_cannot_be_undone"
            android:textColor="@color/black_60"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_sure"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:backgroundTint="@color/red"
            android:onClick="@{() -> viewModel.onClickDeleteHabit(viewModel.habit)}"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            app:cornerRadius="@dimen/spacing_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/close"
            app:layout_constraintTop_toBottomOf="@+id/habit_hint" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/black_30"
            android:onClick="@{() -> viewModel.cancelDialog()}"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/spacing_medium"
            app:cornerRadius="@dimen/spacing_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habit_hint"
            tools:ignore="SpUsage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>







